# math-comp

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.dockerfile  .gitpod.yml  .mailmap  .travis.yml  AUTHORS  CHANGELOG.md  CHANGELOG_UNRELEASED.md  CHANGELOG_algebra_countalg.md  CHANGELOG_algebra_finalg.md  CHANGELOG_algebra_ring_quotient.md  CHANGELOG_algebra_ssralg.md  CHANGELOG_algebra_ssrnum.md  CHANGELOG_algebra_vector.md  CHANGELOG_field_closed_field.md  CHANGELOG_field_falgebra.md  CHANGELOG_field_fieldext.md  CHANGELOG_field_finfield.md  CHANGELOG_field_galois.md  CHANGELOG_fingroup_fingroup.md  CHANGELOG_ssreflect_bigop.md  CHANGELOG_ssreflect_choice.md  CHANGELOG_ssreflect_eqtype.md  CHANGELOG_ssreflect_fintype.md  CHANGELOG_ssreflect_generic_quotient.md  CHANGELOG_ssreflect_order.md  CHANGELOG_ssreflect_tuple.md  CHANGELOG_template.md  CONTRIBUTING.md  ChangeLog  Dockerfile  Dockerfile.make  INITIAL_AUTHORS.md  INSTALL  INSTALL.md  LICENCE  (+142 more)
.github/: CODEOWNERS  pull_request_template.md
.nix/: config.nix  coq-nix-toolbox.nix  nixpkgs.nix
algebra/: Make  Makefile  Makefile.coq.local  algebra.v  all_algebra.v  archimedean.v  arithmetic_tactic.elpi  arithmetic_tactic.v  binnums.v  countalg.v  field_tac.elpi  field_tactic.elpi  field_tactic.v  finalg.v  fraction.v  (+28 more)
mathcomp/: .all.v.un~  Make  Make.test-suite  Makefile  Makefile.common  Makefile.coq.local  Makefile.test-suite.coq.local  _CoqProject  dune  myocamlbuild.ml  ssrmatching.v
mathcomp/algebra/: Make  Makefile  all.v  all_algebra.v  archimedean.v  countalg.v  cyclic.v  descr  dioid.v  dune  finalg.v  forms.v  fraction.v  intdiv.v  interval.v  kleene.v  matrix.v  mxalgebra.v  mxpoly.v  mxred.v  opam  poly.v  polyXY.v  polydiv.v  polyn.v  qpoly.v  rat.v  ring_quotient.v  sesquilinear.v  spectral.v  ssralg.v  ssrint.v  ssrnum.v  vector.v  zmodp.v
mathcomp/all/: Makefile  all.v  dune
mathcomp/attic/: Makefile  algnum_basic.v  all.v  amodule.v  fib.v  forms.v  galgebra.v  multinom.v  mxtens.v  quote.v  tutorial.v
mathcomp/basic/: AUTHORS  Make  Makefile  README  bigop.v  binomial.v  choice.v  descr  div.v  finfun.v  fingraph.v  finset.v  fintype.v  generic_quotient.v  opam  path.v  prime.v  tuple.v
mathcomp/character/: Make  all.v  all_character.v  character.v  classfun.v  descr  dune  finfield.v  inertia.v  integral_char.v  mxabelem.v  mxrepresentation.v  opam  vcharacter.v
mathcomp/discrete/: Make  Makefile  all.v  bigop.v  binomial.v  choice.v  div.v  finfun.v  fingraph.v  finset.v  fintype.v  generic_quotient.v  opam  path.v  prime.v  tuple.v
mathcomp/field/: Make  Makefile  algC.v  algebraics_fundamentals.v  algnum.v  all.v  all_field.v  closed_field.v  countalg.v  cyclotomic.v  dune  falgebra.v  fieldext.v  finfield.v  galois.v  opam  qfpoly.v  separable.v
mathcomp/fingroup/: CeCILL-B  INSTALL  Make  Makefile  action.v  all.v  automorphism.v  descr  dune  fingroup.v  gproduct.v  morphism.v  opam  perm.v  presentation.v  quotient.v
mathcomp/odd_order/: BGappendixAB.v  BGappendixC.v  BGsection1.v  BGsection10.v  BGsection11.v  BGsection12.v  BGsection13.v  BGsection14.v  BGsection15.v  BGsection16.v  BGsection2.v  BGsection3.v  BGsection4.v  BGsection5.v  BGsection6.v  BGsection7.v  BGsection8.v  BGsection9.v  Make  PFsection1.v  PFsection10.v  PFsection11.v  PFsection12.v  PFsection13.v  PFsection14.v  PFsection2.v  PFsection3.v  PFsection4.v  PFsection5.v  PFsection6.v  PFsection7.v  PFsection8.v  PFsection9.v  all.v  descr  opam  stripped_odd_order_theorem.v  wielandt_fixpoint.v
mathcomp/real_closed/: Make  all.v  all_real_closed.v  bigenough.v  cauchyreals.v  complex.v  descr  mxtens.v  opam  ordered_qelim.v  polyorder.v  polyrcf.v  qe_rcf.v  qe_rcf_th.v  realalg.v
mathcomp/solvable/: Make  abelian.v  all.v  all_solvable.v  alt.v  burnside_app.v  center.v  commutator.v  cyclic.v  dune  extraspecial.v  extremal.v  finmodule.v  frobenius.v  gfunctor.v  gseries.v  hall.v  jordanholder.v  maximal.v  nilpotent.v  opam  pgroup.v  primitive_action.v  sylow.v  wielandt_fixpoint.v
mathcomp/ssreflect/: .#cs_fintype 2.v  .#fintype.v  INSTALL.pg  Make  Makefile  Makefile.coq-makefile  Makefile.detect-coq-version  TODO  all.v  all_ssreflect.v  bigenough.v  bigop.v  binomial.v  choice.v  comoid.v  cs_fintype.v  descr  div.v  dune  eqtype.v  finfun.v  fingraph.v  finmap.v  finpred.v  finset.elpi  finset.v  finset_ind.v  fintype.elpi  fintype.v  generic_quotient.v  mini_bigop.v  mini_div.v  mini_eqtype.v  mini_path.v  mini_prime.v  mini_seq.v  mini_ssrbool.v  mini_ssreflect.v  mini_ssrfun.v  mini_ssrnat.v  (+20 more)
mathcomp/ssreflect/plugin/trunk/: ssrcommon.ml4  ssrcommon.mli  ssreflect.ml4  ssreflect.mllib  ssrmatching.ml4  ssrmatching.mli  ssrvernac.mli
mathcomp/ssreflect/plugin/v8.4/: ssreflect.ml4  ssrmatching.ml4  ssrmatching.mli  ssrmatching.v
mathcomp/ssreflect/plugin/v8.5/: ssrbool.v  ssrcommon.ml4  ssrcommon.mli  ssreflect.ml4  ssreflect.mldylib  ssreflect_plugin.mllib  ssrmatching.ml4  ssrmatching.mli  ssrmatching.v  ssrvernac.ml4
mathcomp/ssreflect/plugin/v8.5beta1/: ssreflect.ml4  ssrmatching.ml4
mathcomp/ssreflect/plugin/v8.6/: ssrbool.v  ssreflect.ml4  ssreflect.v  ssrfun.v
mathcomp/ssrtest/: Make  Makefile  absevarprop.v  abstract_var2.v  acrobatic.v  binders.v  binders_of.v  caseview.v  congr.v  custom_tacview.v  deferclear.v  dependent_type_err.v  derive_inversion.v  done_n.v  elim.v  elim2.v  elim_pattern.v  explain_match.v  fast_intro.v  first_n.v  gen_have.v  gen_pattern.v  have_TC.v  have_transp.v  have_view_idiom.v  havesuff.v  if_isnt.v  indetLHS.v  intro_beta.v  intro_block.v  intro_noop.v  ipatalternation.v  ltac_have.v  ltac_in.v  move_after.v  multiview.v  occarrow.v  patnoX.v  primproj.v  rewpatterns.v  (+14 more)
mathcomp/test-suite/: hierarchy_test.v
mathcomp/test_suite/: hierarchy_test.v  imset2_finset.v  imset2_finset.v.out  imset2_gproduct.v  imset2_gproduct.v.out  output.v  output.v.out  output.v.out.8.12  output.v.out.8.13  test_guard.v  test_intro_rw.v  test_order_conv.v  test_rat.v  test_rat.v.out  test_regular_conv.v  test_ssrAC.v
(+1203 files in other folders)
