opam-version: "2.0"
name: "coq-mathcomp-field"
version: "dev"
maintainer: "Mathematical Components <mathcomp-dev@sympa.inria.fr>"

homepage: "https://math-comp.github.io/"
bug-reports: "https://github.com/math-comp/math-comp/issues"
dev-repo: "git+https://github.com/math-comp/math-comp.git"
license: "CeCILL-B"

build: [ make "-C" "mathcomp/field" "-j" "%{jobs}%" ]
install: [ make "-C" "mathcomp/field" "install" ]
depends: [ "coq-mathcomp-solvable" { = "dev" } ]

tags: [ "keyword:algebra" "keyword:field" "keyword:small scale reflection" "keyword:mathematical components" "keyword:odd order theorem" "logpath:mathcomp.field" ]
authors: [ "Jeremy Avigad <>" "Andrea Asperti <>" "Stephane Le Roux <>" "Yves Bertot <>" "Laurence Rideau <>" "Enrico Tassi <>" "Ioana Pasca <>" "Georges Gonthier <>" "Sidi Ould Biha <>" "Cyril Cohen <>" "Francois Garillot <>" "Alexey Solovyev <>" "Russell O'Connor <>" "Laurent Théry <>" "Assia Mahboubi <>" ]

synopsis: "Mathematical Components Library on Fields"
description:"""
This library contains definitions and theorems about field extensions,
galois theory, algebraic numbers, cyclotomic polynomials...
"""
