opam-version: "2.0"
version: "dev"
maintainer: "Mathematical Components <mathcomp-dev@sympa.inria.fr>"

homepage: "https://math-comp.github.io/"
bug-reports: "https://github.com/math-comp/math-comp/issues"
dev-repo: "git+https://github.com/math-comp/math-comp.git"
license: "CECILL-B"

depends: [ "rocq-mathcomp-field" { = version } ]
authors: [ "The Mathematical Components team" ]

synopsis: "Compatibility package for rocq-mathcomp-field"
