opam-version: "1.2"
name: "coq-mathcomp-fingroup"
version: "dev"
maintainer: "Mathematical Components <mathcomp-dev@sympa.inria.fr>"
synopsis: "The Mathematical Components library"

homepage: "https://math-comp.github.io/math-comp/"
bug-reports: "Mathematical Components <mathcomp-dev@sympa.inria.fr>"
dev-repo: "https://github.com/math-comp/math-comp.git"
license: "CeCILL-B"

build: [ make "-C" "mathcomp/fingroup" "-j" "%{jobs}%" ]
install: [ make "-C" "mathcomp/fingroup" "install" ]
remove: [ "sh" "-c" "rm -rf '%{lib}%/coq/user-contrib/mathcomp/fingroup'" ]
depends: [ "coq-mathcomp-ssreflect" { = "dev" } ]

tags: [ "keyword:finite groups" "keyword:small scale reflection" "keyword:mathematical components" "keyword:odd order theorem" ]
authors: [ "Jeremy Avigad <>" "Andrea Asperti <>" "Stephane Le Roux <>" "Yves Bertot <>" "Laurence Rideau <>" "Enrico Tassi <>" "Ioana Pasca <>" "Georges Gonthier <>" "Sidi Ould Biha <>" "Cyril Cohen <>" "Francois Garillot <>" "Alexey Solovyev <>" "Russell O'Connor <>" "Laurent Théry <>" "Assia Mahboubi <>" ]
