opam-version: "2.0"
name: "coq-mathcomp-fingroup"
version: "dev"
maintainer: "Mathematical Components <mathcomp-dev@sympa.inria.fr>"

homepage: "https://math-comp.github.io/"
bug-reports: "https://github.com/math-comp/math-comp/issues"
dev-repo: "git+https://github.com/math-comp/math-comp.git"
license: "CeCILL-B"

build: [ make "-C" "mathcomp/fingroup" "-j" "%{jobs}%" ]
install: [ make "-C" "mathcomp/fingroup" "install" ]
depends: [ "coq-mathcomp-ssreflect" { = "dev" } ]

tags: [ "keyword:finite groups" "keyword:small scale reflection" "keyword:mathematical components" "keyword:odd order theorem" "logpath:mathcomp.fingroup" ]
authors: [ "Jeremy Avigad <>" "Andrea Asperti <>" "Stephane Le Roux <>" "Yves Bertot <>" "Laurence Rideau <>" "Enrico Tassi <>" "Ioana Pasca <>" "Georges Gonthier <>" "Sidi Ould Biha <>" "Cyril Cohen <>" "Francois Garillot <>" "Alexey Solovyev <>" "Russell O'Connor <>" "Laurent Théry <>" "Assia Mahboubi <>" ]

synopsis: "Mathematical Components Library on finite groups"
description: """
This library contains definitions and theorems about finite groups,
group quotients, group morphisms, group presentation, group action...
"""
