opam-version: "1.2"
name: "coq-mathcomp-solvable"
version: "dev"
maintainer: "Mathematical Components <mathcomp-dev@sympa.inria.fr>"
synopsis: "The Mathematical Components library"

homepage: "https://math-comp.github.io/math-comp/"
bug-reports: "Mathematical Components <mathcomp-dev@sympa.inria.fr>"
dev-repo: "https://github.com/math-comp/math-comp.git"
license: "CeCILL-B"

build: [ make "-C" "mathcomp/solvable" "-j" "%{jobs}%" ]
install: [ make "-C" "mathcomp/solvable"  "install" ]
remove: [ "sh" "-c" "rm -rf '%{lib}%/coq/user-contrib/mathcomp/solvable'" ]
depends: [ "coq-mathcomp-algebra" { = "dev" } ]

tags: [ "keyword:finite groups" "keyword:Feit Thompson theorem" "keyword:small scale reflection" "keyword:mathematical components" "keyword:odd order theorem" ]
authors: [ "Jeremy Avigad <>" "Andrea Asperti <>" "Stephane Le Roux <>" "Yves Bertot <>" "Laurence Rideau <>" "Enrico Tassi <>" "Ioana Pasca <>" "Georges Gonthier <>" "Sidi Ould Biha <>" "Cyril Cohen <>" "Francois Garillot <>" "Alexey Solovyev <>" "Russell O'Connor <>" "Laurent Théry <>" "Assia Mahboubi <>" ]
