opam-version: "2.0"
version: "dev"
maintainer: "Mathematical Components <mathcomp-dev@sympa.inria.fr>"

homepage: "https://math-comp.github.io/"
bug-reports: "https://github.com/math-comp/math-comp/issues"
dev-repo: "git+https://github.com/math-comp/math-comp.git"
license: "CECILL-B"

build: [ make "-C" "mathcomp/solvable" "-j" "%{jobs}%" ]
install: [ make "-C" "mathcomp/solvable"  "install" ]
depends: [ "coq-mathcomp-algebra" { = version } ]

tags: [ "keyword:finite groups" "keyword:Feit Thompson theorem" "keyword:small scale reflection" "keyword:mathematical components" "keyword:odd order theorem" "logpath:mathcomp.solvable" ]
authors: [ "The Mathematical Components team" ]

synopsis: "Mathematical Components Library on finite groups (II)"

description:"""
This library contains more definitions and theorems about finite groups.
"""
