opam-version: "2.0"
version: "dev"
maintainer: "Mathematical Components <mathcomp-dev@sympa.inria.fr>"

homepage: "https://math-comp.github.io/"
bug-reports: "https://github.com/math-comp/math-comp/issues"
dev-repo: "git+https://github.com/math-comp/math-comp.git"
license: "CECILL-B"

build: [ make "-C" "mathcomp/ssreflect" "-j" "%{jobs}%" ]
install: [ make "-C" "mathcomp/ssreflect" "install" ]
depends: [ "coq" { ((>= "8.15" & < "8.20~") | (= "dev"))} ]

tags: [
  "keyword:small scale reflection"
  "keyword:mathematical components"
  "keyword:bigop"
  "keyword:big operators"
  "keyword:biomial coefficient"
  "keyword:integer division theory"
  "keyword:finite sets"
  "keyword:functions with finite domain"
  "keyword:finite graphs"
  "keyword:quotient types"
  "keyword:order theory"
  "keyword:partial order"
  "keyword:lattices"
  "keyword:lists"
  "keyword:ordering and sorting lists"
  "keyword:prime numbers"
  "keyword:tuples"
  "keyword:bounded lists"
  "logpath:mathcomp.ssreflect"
]
authors: [ "The Mathematical Components team" ]

synopsis: "Small Scale Reflection"
description: """
This library includes the small scale reflection proof language
extension and the minimal set of libraries to take advantage of it.
This includes libraries on lists (seq), boolean and boolean
predicates, natural numbers and types with decidable equality,
finite types, finite sets, finite functions, finite graphs, basic arithmetics
and prime numbers, big operators
"""
