opam-version: "2.0"
version: "dev"
maintainer: "Mathematical Components <mathcomp-dev@sympa.inria.fr>"

homepage: "https://math-comp.github.io/"
bug-reports: "https://github.com/math-comp/math-comp/issues"
dev-repo: "git+https://github.com/math-comp/math-comp.git"
license: "CECILL-B"

build: [ make "-C" "fingroup" "-j" "%{jobs}%" ]
install: [ make "-C" "fingroup" "install" ]
depends: [ "rocq-mathcomp-ssreflect" { = version } ]

tags: [
  "keyword:small scale reflection"
  "keyword:mathematical components"
  "keyword:finite groups"
  "logpath:mathcomp.fingroup"
]
authors: [ "The Mathematical Components team" ]

synopsis: "Mathematical Components Library on finite groups"
description: """
This library contains definitions and theorems about finite groups,
group quotients, group morphisms, group presentation, group action...
"""
