opam-version: "2.0"
version: "dev"
maintainer: "Mathematical Components <mathcomp-dev@sympa.inria.fr>"

homepage: "https://math-comp.github.io/"
bug-reports: "https://github.com/math-comp/math-comp/issues"
dev-repo: "git+https://github.com/math-comp/math-comp.git"
license: "CECILL-B"

build: [ make "-C" "group_representation" "-j" "%{jobs}%" ]
install: [ make "-C" "group_representation" "install" ]
depends: [ "rocq-mathcomp-field" { = version } ]

tags: [
  "keyword:small scale reflection"
  "keyword:mathematical components"
  "keyword:algebra"
  "keyword:character"
  "keyword:group representation"
  "logpath:mathcomp.group_representation"
]
authors: [ "The Mathematical Components team" ]

synopsis: "Mathematical Components Library on group representation theory"
description:"""
This library contains definitions and theorems about group
representations, characters and class functions.
"""
