(coq.theory
 (name mathcomp.field)
 (package coq-mathcomp-field)
 (modules :standard)
 (synopsis "Mathematical Components Library on Fields")
 (theories mathcomp.ssreflect mathcomp.fingroup mathcomp.algebra mathcomp.solvable)
 (flags
   -w -projection-no-head-constant
   -w -redundant-canonical-projection
   -w -notation-overridden
   -w -duplicate-clear
   -w -ambiguous-paths
   -w -undeclared-scope
   -w -deprecated-hint-without-locality
   ; -w -set-maximal-deprecated
   ; -w -deprecated-hint-constr
 ))
