(coq.theory
 (name mathcomp.fingroup)
 (package coq-mathcomp-fingroup)
 (modules :standard)
 (synopsis "Mathematical Components")
 (theories mathcomp.ssreflect)
 (flags
   -w -notation-overridden
   -w -redundant-canonical-projection
   -w -projection-no-head-constant
   -w -undeclared-scope
   -w -set-maximal-deprecated
   -w -ambiguous-paths
   -w -duplicate-clear
   -w -deprecated-hint-without-locality
   -w -deprecated-hint-rewrite-without-locality
 ))
