(coq.theory
 (name mathcomp.solvable)
 (package coq-mathcomp-solvable)
 (modules :standard)
 (synopsis "Mathematical Components Library on finite groups (II)")
 (theories mathcomp.ssreflect mathcomp.fingroup mathcomp.algebra)
 (flags
   -w -notation-overridden
   -w -redundant-canonical-projection
   -w -projection-no-head-constant
   -w -undeclared-scope
   -w -set-maximal-deprecated
   -w -ambiguous-paths
   -w -duplicate-clear
 ))
