(coq.theory
 (name mathcomp.ssreflect)
 (package coq-mathcomp-ssreflect)
 (modules :standard)
 (synopsis "Small Scale Reflection")
 (flags
   -w -projection-no-head-constant
   -w -redundant-canonical-projection
   -w -notation-overridden
   -w -duplicate-clear
   -w -ambiguous-paths
   -w -undeclared-scope
   -w -deprecated-hint-without-locality
   ; -w -set-maximal-deprecated
   ; -w -irrelevant-reserved-notation-only-parsing
   ; -w -irrelevant-format-only-parsing
   ; -w -deprecated-hint-constr
 ))
